[package]
name = "async-thread"
version = "0.1.1"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"
description = "Futures version of std::thread"
repository = "https://github.com/leo60228/async-thread"
homepage = "https://github.com/leo60228/async-thread"
readme = "README.md"
keywords = ["futures", "thread", "channel", "async"]
categories = ["asynchronous", "concurrency"]
license = "MIT OR Apache-2.0"

[badges]
is-it-maintained-issue-resolution = { repository = "leo60228/broadcaster" }
is-it-maintained-open-issues = { repository = "leo60228/broadcaster" }
maintenance = { status = "experimental" }

[dependencies]
futures-channel = "0.3.1"

[dev-dependencies]
async-std = { version = "1.3.0", features = ["attributes"] }
